<resources>
    <string name="app_name">Flora &amp; Fauna</string>
    <string name="Back">Back</string>
    <string name="Settings">Settings</string>
    <string name="Help">Help</string>
    <string name="Home">Home</string>
    <string name="Map">Map Page</string>
    <string name="Recordings">Recordings</string>
    <string name="Images">Images ON/OFF</string>
    <string name="Clear">Clear</string>
    <string name="clear_search_history">Clear Search History</string>
    <string name="clear_cached_data">Clear Cached Data</string>

    <string name="miles">Miles</string>
    <string-array name="millage">
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
    </string-array>

    <string-array name="map_search_options">
        <item>Common name by state</item>
        <item>Common name by county</item>
        <item>Scientific name by state</item>
        <item>Scientific name by county</item>
        <item>Nearby sightings (common name)</item>
        <item>Nearby sightings (scientific name)</item>
    </string-array>

    <string name="Themes">Themes</string>
    <string-array name="themes">
        <item>Green</item>
        <item>Blue</item>
        <item>Mono</item>
        <item>Cherry</item>
    </string-array>

    <string-array name="Filter">
        <item>None</item>
        <item>Kingdom</item>
        <item>Genus</item>
        <item>Location</item>
    </string-array>

    <string-array name="PR_Locations">
        <item>On Page</item>
        <item>Create New</item>
    </string-array>

</resources>
