<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home_white"
        android:title="@string/Home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_help_action_white"
        android:title="@string/Help"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_white"
        android:title="@string/Settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_map"
        android:icon="@drawable/ic_map_action_white"
        android:title="@string/Map"
        app:showAsAction="ifRoom" />

</menu>